--- a/RESTComponent.Api/RESTComponent.Api.csproj
+++ b/RESTComponent.Api/RESTComponent.Api.csproj
@@ -36,6 +36,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Images\IImageProvider.cs" />
+    <Compile Include="Images\ImageProvider.cs" />
     <Compile Include="Manager\IStartup.cs" />
     <Compile Include="Status\IStatusController.cs" />
     <Compile Include="Status\StatusController.cs" />
@@ -84,28 +86,24 @@
       <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="RTM.Images, Version=1.0.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\RTM.Images.1.0.1.0\lib\net30\RTM.Images.dll</HintPath>
+    <Reference Include="RTM.Images, Version=1.0.1.1, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\RTM.Images.1.0.1.2\lib\net30\RTM.Images.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="RTM.Images.Decoder, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\RTM.Images.1.0.1.0\lib\net30\RTM.Images.Decoder.dll</HintPath>
+      <HintPath>..\packages\RTM.Images.1.0.1.2\lib\net30\RTM.Images.Decoder.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="RTM.Images.Decoder.Bitmap, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\RTM.Images.1.0.1.0\lib\net30\RTM.Images.Decoder.Bitmap.dll</HintPath>
+      <HintPath>..\packages\RTM.Images.1.0.1.2\lib\net30\RTM.Images.Decoder.Bitmap.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="RTM.Images.Decoder.ImageSource, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\RTM.Images.1.0.1.0\lib\net30\RTM.Images.Decoder.ImageSource.dll</HintPath>
+      <HintPath>..\packages\RTM.Images.1.0.1.2\lib\net30\RTM.Images.Decoder.ImageSource.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="RTM.Images.Factory, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\RTM.Images.1.0.1.0\lib\net30\RTM.Images.Factory.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="RTM.Images.Provider, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\RTM.Images.1.0.1.0\lib\net30\RTM.Images.Provider.dll</HintPath>
+      <HintPath>..\packages\RTM.Images.1.0.1.2\lib\net30\RTM.Images.Factory.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
