--- a/RESTComponent.Console/RESTComponent.Console.csproj
+++ b/RESTComponent.Console/RESTComponent.Console.csproj
@@ -118,28 +118,25 @@
       <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="RTM.Images, Version=1.0.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\RTM.Images.1.0.1.0\lib\net30\RTM.Images.dll</HintPath>
+    <Reference Include="PresentationCore" />
+    <Reference Include="RTM.Images, Version=1.0.1.1, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\RTM.Images.1.0.1.2\lib\net30\RTM.Images.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="RTM.Images.Decoder, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\RTM.Images.1.0.1.0\lib\net30\RTM.Images.Decoder.dll</HintPath>
+      <HintPath>..\packages\RTM.Images.1.0.1.2\lib\net30\RTM.Images.Decoder.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="RTM.Images.Decoder.Bitmap, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\RTM.Images.1.0.1.0\lib\net30\RTM.Images.Decoder.Bitmap.dll</HintPath>
+      <HintPath>..\packages\RTM.Images.1.0.1.2\lib\net30\RTM.Images.Decoder.Bitmap.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="RTM.Images.Decoder.ImageSource, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\RTM.Images.1.0.1.0\lib\net30\RTM.Images.Decoder.ImageSource.dll</HintPath>
+      <HintPath>..\packages\RTM.Images.1.0.1.2\lib\net30\RTM.Images.Decoder.ImageSource.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="RTM.Images.Factory, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\RTM.Images.1.0.1.0\lib\net30\RTM.Images.Factory.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="RTM.Images.Provider, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\RTM.Images.1.0.1.0\lib\net30\RTM.Images.Provider.dll</HintPath>
+      <HintPath>..\packages\RTM.Images.1.0.1.2\lib\net30\RTM.Images.Factory.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -157,6 +154,8 @@
       <HintPath>..\packages\Microsoft.AspNet.WebApi.Owin.5.2.3\lib\net45\System.Web.Http.Owin.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Xaml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RESTComponent.Api\RESTComponent.Api.csproj">
