--- a/RESTComponent.RTComponent/RESTComponent.RTComponent.csproj
+++ b/RESTComponent.RTComponent/RESTComponent.RTComponent.csproj
@@ -37,12 +37,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="CameraImage\CameraImageFactory.cs" />
     <Compile Include="Component\CameraStream.cs" />
+    <Compile Include="CameraImage\ICameraImageFactory.cs" />
     <Compile Include="Manager\ComponentManager.cs" />
     <Compile Include="Manager\IComponentManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\CommonServiceLocator.1.3\lib\portable-net4+sl5+netcore45+wpa81+wp8\Microsoft.Practices.ServiceLocation.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="OpenRTM.Core, Version=1.3.0.0, Culture=neutral, PublicKeyToken=9107744efe29c21e, processorArchitecture=MSIL" />
     <Reference Include="OpenRTM.Extension, Version=1.3.0.0, Culture=neutral, PublicKeyToken=9107744efe29c21e, processorArchitecture=MSIL" />
     <Reference Include="OpenRTM.IIOP, Version=1.3.0.0, Culture=neutral, PublicKeyToken=9107744efe29c21e, processorArchitecture=MSIL" />
@@ -69,6 +75,8 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Xaml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RESTComponent.Api\RESTComponent.Api.csproj">
